# zarrvis

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  build_examples.py
scripts/: gen_colormaps.py  screenshot.py
src/zarrvis/: __init__.py  __main__.py  api.py  app.py  cli.py  colormap.py  errors.py  security.py  slicing.py  stats.py  store.py
src/zarrvis/static/: app.css  app.js  colormaps.js  index.html
tests/: conftest.py  test_api_health.py  test_api_slice.py  test_api_tree.py  test_colormap.py  test_remote.py  test_security.py  test_slicing.py  test_store.py  test_xarray.py
